apollo-federation/src/sources/connect/federated_query_graph/snapshots/apollo_federation__sources__connect__federated_query_graph__builder__tests__it_handles_a_cyclical_schema.snap
---
source: apollo-federation/src/sources/connect/federated_query_graph/builder.rs
expression: connectors.source_data.values()
---
[
    Connector {
        id: ConnectId {
            label: "connectors.json http: Get /users/1",
            subgraph_name: "connectors",
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(Query.me),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJson(
            HttpJsonTransport {
                base_url: "https://jsonplaceholder.typicode.com/",
                path_template: URLPathTemplate {
                    path: [
                        ParameterValue {
                            parts: [
                                Text(
                                    "users",
                                ),
                            ],
                        },
                        ParameterValue {
                            parts: [
                                Text(
                                    "1",
                                ),
                            ],
                        },
                    ],
                    query: {},
                },
                method: Get,
                headers: {
                    "X-Auth-Token": Some(
                        As(
                            "AuthToken",
                        ),
                    ),
                    "user-agent": Some(
                        Value(
                            [
                                "Firefox",
                            ],
                        ),
                    ),
                    "X-From-Env": None,
                },
                body: None,
            },
        ),
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        "id",
                        None,
                    ),
                    Field(
                        None,
                        "name",
                        None,
                    ),
                    Group(
                        Alias {
                            name: "friends",
                        },
                        SubSelection {
                            selections: [
                                Field(
                                    None,
                                    "id",
                                    None,
                                ),
                            ],
                            star: None,
                        },
                    ),
                ],
                star: None,
            },
        ),
    },
    Connector {
        id: ConnectId {
            label: "connectors.json http: Get /users/1",
            subgraph_name: "connectors",
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(Query.user),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJson(
            HttpJsonTransport {
                base_url: "https://jsonplaceholder.typicode.com/",
                path_template: URLPathTemplate {
                    path: [
                        ParameterValue {
                            parts: [
                                Text(
                                    "users",
                                ),
                            ],
                        },
                        ParameterValue {
                            parts: [
                                Text(
                                    "1",
                                ),
                            ],
                        },
                    ],
                    query: {},
                },
                method: Get,
                headers: {
                    "X-Auth-Token": Some(
                        As(
                            "AuthToken",
                        ),
                    ),
                    "user-agent": Some(
                        Value(
                            [
                                "Firefox",
                            ],
                        ),
                    ),
                    "X-From-Env": None,
                },
                body: None,
            },
        ),
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        "id",
                        None,
                    ),
                    Field(
                        None,
                        "name",
                        None,
                    ),
                    Group(
                        Alias {
                            name: "friends",
                        },
                        SubSelection {
                            selections: [
                                Field(
                                    None,
                                    "id",
                                    None,
                                ),
                            ],
                            star: None,
                        },
                    ),
                ],
                star: None,
            },
        ),
    },
]
